# euclid-etree

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE.md  Makefile.am  README  README.md  configure.ac
cvm/: Makefile.am  README
examples/: Makefile.am
libsrc/: Makefile.am  btree.h  buffer.c  etree.h  schema.h  schemax.h  wrapper.c  wrapper.h  xplatform.h
output4d/: Makefile.am  bin2etree4d.c  etree4d2txt.c  query4d.c  txt2etree4d.c
tools/: Makefile.am  esetappmeta.c  etreeinfo.c
